# ferrugo

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/ferrugo/: either.hpp  index_sequence.hpp  invoke.hpp  iterable.hpp  iterator_interface.hpp  iterator_range.hpp  macros.hpp  make_unique.hpp  operators.hpp  optional.hpp  owning_range.hpp  pipeline.hpp  range_interface.hpp  range_ref.hpp  ranges.hpp  std_ostream.hpp  type_name.hpp  type_traits.hpp
include/ferrugo/core/: ansi.hpp  format.hpp  format_utils.hpp  index_sequence.hpp  iterator_interface.hpp  math.hpp  optional.hpp  overloaded.hpp  pipeline.hpp  predicates.hpp  quantities.hpp  range_interface.hpp  ranges.hpp  type_name.hpp  type_traits.hpp  types.hpp
include/ferrugo/core/arrays/: array.hpp
include/ferrugo/core/format/: enum_formatter.hpp  format.hpp  std.hpp  struct_formatter.hpp
include/ferrugo/core/ranges/: all.hpp  forward_iterable.hpp  iterable.hpp  iterator_range.hpp  owning_range.hpp  random_access_iterable.hpp  range_ref.hpp  sequence.hpp
include/ferrugo/seq/: filter.hpp  transform.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  format.test.cpp  iterable.test.cpp  matchers.hpp  matrix.test.cpp  optional.test.cpp  predicates.test.cpp  sequence.test.cpp
